Added more boxes

--- a/index.html
+++ b/index.html
@@ -19,6 +19,20 @@
         <li></li>
         <li></li>
         <li></li>
+        <!-- more boxes  -->
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <!-- More boxes  -->
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
       </ul>
     </div>
   </body>
